# Recipe-Generator

./: Dockerfile  README.md  pyproject.toml
src/: main.py  settings.py
src/integartions/: base.py  chatgpt.py  factory.py  gemini.py
src/routers/: recipe.py  schema.py  supported_llm.py
